[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Unnamed.fnt" type="BitmapFont" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
margin_left = 13.0
margin_top = 23.0
margin_right = 1000.0
margin_bottom = 577.0

[node name="Stats" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 987.0
margin_bottom = 554.0

[node name="Labels" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Stats"]
margin_right = 250.0
margin_bottom = 554.0
rect_min_size = Vector2( 250, 0 )
alignment = 2

[node name="HealthLabel" type="Label" parent="CanvasLayer/MarginContainer/Stats/Labels"]
margin_top = 406.0
margin_right = 250.0
margin_bottom = 478.0
theme = SubResource( 1 )
text = "ЗДОРОВЬЕ"

[node name="ArmorLabel" type="Label" parent="CanvasLayer/MarginContainer/Stats/Labels"]
margin_top = 482.0
margin_right = 250.0
margin_bottom = 554.0
theme = SubResource( 2 )
text = "БРОНЯ"
autowrap = true

[node name="Values" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Stats"]
margin_left = 254.0
margin_right = 320.0
margin_bottom = 554.0
alignment = 2

[node name="HealthValue" type="Label" parent="CanvasLayer/MarginContainer/Stats/Values"]
margin_top = 406.0
margin_right = 66.0
margin_bottom = 478.0
theme = SubResource( 3 )
text = "100"

[node name="ArmorValue" type="Label" parent="CanvasLayer/MarginContainer/Stats/Values"]
margin_top = 482.0
margin_right = 66.0
margin_bottom = 554.0
theme = SubResource( 3 )
text = "0"

[node name="Ammo" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Stats"]
margin_left = 324.0
margin_right = 987.0
margin_bottom = 554.0
size_flags_horizontal = 3
alignment = 2

[node name="AmmoValue" type="Label" parent="CanvasLayer/MarginContainer/Stats/Ammo"]
margin_top = 482.0
margin_right = 663.0
margin_bottom = 554.0
size_flags_vertical = 1
theme = SubResource( 3 )
text = "0"
align = 2
